tests/syntactic/syntax6/syntax6.err
Error: syntax error, unexpected +, expecting end of file in file syntax6.dl at line 3
+
^-
1 errors generated, evaluation aborted
