tests/syntactic/syntax6/syntax6.dl
// Check that location is reported correctly
// when included file has an error on the first line
+
.type Node

reachable   (node1:Node, node2:Node) input
same_clique (node1:Node, node2:Node) input
edge        (node1:Node, node2:Node) input
